{
    "name": "LessonInput",
    "maps": [
        {
            "name": "Weapon",
            "id": "c0472cb2-8656-4f30-844a-f0f64e205690",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "92cafd21-6220-4dbf-b3b8-18a475a80523",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch_weapon_1",
                    "type": "Button",
                    "id": "fc143ffc-4b9b-4597-9527-b271fffe8479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch_weapon_2",
                    "type": "Button",
                    "id": "45390a13-be0e-4ee1-89af-2531fe284c4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch_weapon_3",
                    "type": "Button",
                    "id": "7b42c8d4-c5f5-4613-b571-645385c5086e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "8ce220d4-3e68-4e9a-beed-ead82efeff7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67ed2622-eef3-496a-a7ad-211b007e9419",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7cb4b63-9121-4587-912b-2d02af81db17",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_weapon_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c931ab9e-7747-4e26-8535-53548b39398d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_weapon_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "362dd727-56aa-44db-854d-40f65f96fdd1",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_weapon_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1df56bdc-141c-46df-a2ae-be24db12d7ef",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}